<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="32dp"
    tools:context=".NuevaTarea">

    <EditText
        android:id="@+id/textNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pista_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/pista_descripcion"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintEnd_toEndOf="@+id/textNombre"
        app:layout_constraintStart_toStartOf="@+id/textNombre"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <EditText
        android:id="@+id/textFecha"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/pista_fecha"
        android:inputType="date"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintStart_toStartOf="@+id/textDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />

    <Spinner
        android:id="@+id/prioridad"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textDescripcion"
        app:layout_constraintStart_toEndOf="@+id/textFecha"
        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />

    <EditText
        android:id="@+id/textCoste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Coste"
        android:inputType="numberDecimal"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintEnd_toEndOf="@+id/textFecha"
        app:layout_constraintStart_toStartOf="@+id/textFecha"
        app:layout_constraintTop_toBottomOf="@+id/textFecha" />

    <Button
        android:id="@+id/crearN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="crearNuevaTarea"
        android:text="@string/boton_crear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelarN"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="cancelarNuevaTarea"
        android:text="@string/boton_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>