<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:autoText="false"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/pista_usuario"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor"
        android:textColorHighlight="#E0E0E0"
        android:textColorHint="@color/textColorHint"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/pista_contraseña"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="iniciarSesion"
        android:text="@string/boton_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/textContrasena"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textContrasena"
        app:layout_constraintTop_toBottomOf="@+id/textContrasena" />
</androidx.constraintlayout.widget.ConstraintLayout>